--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,17 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.thymeleaf.extras</groupId>
+      <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+      <version>3.0.4.RELEASE</version>
+    </dependency>
+
+    <dependency>
       <artifactId>mysql-connector-java</artifactId>
       <groupId>mysql</groupId>
       <scope>runtime</scope>
